router-system/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: openshift-console
  name: console-system
  label: 
    type: system
spec:
  host: console-openshift-console.system.redcluster.danila.home
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None
